暴露类；类的构造；类的数据成员；类的属性（not pass

--- a/PYWrapper.vcxproj
+++ b/PYWrapper.vcxproj
@@ -98,8 +98,7 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>xcopy /y "Debug\PYWrapper.dll" "Debug\PYWrapper.pyd"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -150,6 +149,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ExposeClasses.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
