--- a/PYWrapper.vcxproj.filters
+++ b/PYWrapper.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="stdafx.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ExposeClasses.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
