--- a/PYWrapper.vcxproj.filters
+++ b/PYWrapper.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="Inheritance.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Callback.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PYWrapper.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Callback.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
