--- a/PYWrapper.vcxproj.filters
+++ b/PYWrapper.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Pointer.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="voidptr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
